--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" href="css.css">
+<title>Thomas Daniel</title>
 </head>
 <body>
 
-<h1>Heading</h1>
-<p>Paragraph</p>
+<h1>Hello</h1>
 
 <script src="js.js">
 </script>
